k8s-script/micro-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time
  labels:
    app: time
    version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: time
      version: v1.0
  template:
    metadata:
      labels:
        app: time
        version: v1.0
    spec:
      containers:
      - env:
        name: time
        image: abuosi/time:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health/live
          initialDelaySeconds: 5
          periodSeconds: 4
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health/ready
          initialDelaySeconds: 6
          periodSeconds: 5
          timeoutSeconds: 1
        securityContext:
          privileged: false

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
    version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
      version: latest
  template:
    metadata:
      labels:
        app: gateway
        version: latest
    spec:
      containers:
      - env:      
        name: gateway
        image: abuosi/gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health/live
          initialDelaySeconds: 5
          periodSeconds: 4
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health/ready
          initialDelaySeconds: 6
          periodSeconds: 5
          timeoutSeconds: 1
        securityContext:
          privileged: false
