k8s-script/micro-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time
spec:
  selector:
    app: time
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30004
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30005
  type: LoadBalancer
